--- a/shows.html
+++ b/shows.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Movie-Show App</title>
-    <script
-      src="https://kit.fontawesome.com/1935d064dd.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
